Update RELEASE_STEPS.md